# pico-vsp

./: CMakeLists.txt  LICENSE  README.md  SPEC.md  main.c  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c
firmware/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.c  tusb_config.h  usb_descriptors.c
host/: bridge.py  pyproject.toml  vsp.py
